[gd_scene format=3 uid="uid://ba4h8r8bycd2n"]

[ext_resource type="Texture2D" uid="uid://cv8cdul30cn3m" path="res://Assets/Sprites/FT_sprites_6x.png" id="1_754uh"]
[ext_resource type="Script" uid="uid://dpk0t8b3ctjfj" path="res://Scenes/DatePicker/DatePicker.gd" id="1_u7u6f"]
[ext_resource type="LabelSettings" uid="uid://cdvyd5tsl4q8k" path="res://Assets/LabelSettings/LabelTexture_12_blue.tres" id="2_r5x6c"]

[sub_resource type="AtlasTexture" id="AtlasTexture_r5x6c"]
atlas = ExtResource("1_754uh")
region = Rect2(330, 54, 36, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_u7u6f"]
atlas = ExtResource("1_754uh")
region = Rect2(366, 54, 36, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_kpkmu"]
atlas = ExtResource("1_754uh")
region = Rect2(410, 54, 71, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_b140t"]
atlas = ExtResource("1_754uh")
region = Rect2(330, 78, 36, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_pdnvj"]
atlas = ExtResource("1_754uh")
region = Rect2(366, 78, 36, 18)

[node name="DatePicker" type="Control" unique_id=667777001]
custom_minimum_size = Vector2(0, 75)
layout_mode = 3
anchors_preset = 0
offset_bottom = 75.0
script = ExtResource("1_u7u6f")

[node name="UpButton" type="TextureButton" parent="." unique_id=585509437]
layout_mode = 1
offset_left = 30.0
offset_right = 66.0
offset_bottom = 18.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = SubResource("AtlasTexture_r5x6c")
texture_pressed = SubResource("AtlasTexture_u7u6f")

[node name="NinePatchRect" type="NinePatchRect" parent="." unique_id=880043594]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -16.0
offset_right = 96.0
offset_bottom = 16.0
grow_vertical = 2
texture = SubResource("AtlasTexture_kpkmu")
patch_margin_left = 39
patch_margin_top = 15
patch_margin_right = 39
patch_margin_bottom = 17

[node name="ValueLabel" type="Label" parent="NinePatchRect" unique_id=1279344487]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -8.0
offset_right = 25.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
text = "Picker"
label_settings = ExtResource("2_r5x6c")
horizontal_alignment = 1
vertical_alignment = 1

[node name="DownButton" type="TextureButton" parent="." unique_id=132618560]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = -18.0
offset_right = 66.0
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = SubResource("AtlasTexture_b140t")
texture_pressed = SubResource("AtlasTexture_pdnvj")

[connection signal="pressed" from="UpButton" to="." method="_on_up_button_pressed"]
[connection signal="pressed" from="DownButton" to="." method="_on_down_button_pressed"]
